--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste-React Series",
-  "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -23,11 +24,13 @@
   },
   "homepage": "https://github.com/shaarma12/Namaste_React#readme",
   "dependencies": {
-    "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "parcel": "^2.9.3",
     "process": "^0.11.10"
   }
 }
+
+
