--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "homepage": "https://github.com/shaarma12/Namaste_React#readme",
   "dependencies": {
+    "dom": "^0.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "parcel": "^2.9.3",
     "process": "^0.11.10"
   }
 }
-
-
