--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/shaarma12/Namaste_React#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "router": "^1.3.8"
   },
