--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.9.3",
     "postcss": "^8.4.30",
     "process": "^0.11.10",
