--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "parcel build index.html",
     "test": "jest --watchAll"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shaarma12/Namaste_React.git"
@@ -26,6 +25,7 @@
   "homepage": "https://github.com/shaarma12/Namaste_React#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "cosmiconfig": "^9.0.0",
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
